--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -46,6 +46,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/text_view_margin"
                     android:padding="@dimen/text_view_padding"
+                    android:inputType="number"
                     android:text="@string/product_quantity"/>
 
                 <TextView
