--- a/app/src/main/res/layout/list_product.xml
+++ b/app/src/main/res/layout/list_product.xml
@@ -35,6 +35,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/title"
+                android:inputType="number"
                 android:layout_marginBottom="@dimen/margin_sides"/>
 
             <TextView
@@ -45,6 +46,14 @@
                 android:layout_marginBottom="@dimen/margin_sides"/>
 
         </LinearLayout>
+
+        <Button
+            android:id="@+id/product_sale_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:text="@string/sale"/>
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
